exposer l’API d’auth et ajouter gestion globale des erreurs